add twin interface controllers
