# docs/swagger.yaml
@@ -20,6 +20,21 @@ definitions:
     - interfaceId
     - name
     type: object
+  domain.TwinInterface:
+    properties:
+      active:
+        type: boolean
+      createdAt:
+        type: string
+      dataDefinition:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+      parent:
+        type: string
+    type: object
 info:
   contact: {}
 paths:
@@ -85,4 +100,65 @@ paths:
       summary: Get Twin Instance by Id
       tags:
       - TwinInstances
+  /twin-interfaces:
+    get:
+      consumes:
+      - application/json
+      description: This endpoint returns all Twin Interfaces registered in the Platform.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/domain.TwinInterface'
+            type: array
+      summary: Get All Twin Interfaces
+      tags:
+      - TwinInterfaces
+    post:
+      consumes:
+      - application/json
+      description: This endpoint creates the Twin Interface.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/domain.TwinInterface'
+      summary: Create Twin Interface
+      tags:
+      - TwinInterfaces
+  /twin-interfaces/{id}:
+    get:
+      consumes:
+      - application/json
+      description: This endpoint returns the Twin Interface by id.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/domain.TwinInterface'
+      summary: Get Twin Interface by Id
+      tags:
+      - TwinInterfaces
+  /twin-interfaces/{instanceId}:
+    delete:
+      consumes:
+      - application/json
+      description: This endpoint deletes the Twin Interface.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/domain.TwinInterface'
+      summary: Delete Twin Interface
+      tags:
+      - TwinInterfaces
 swagger: "2.0"
